Rework a la lista de cartas. Colección RC1

--- a/css/sass/_media.sass
+++ b/css/sass/_media.sass
@@ -62,8 +62,19 @@
         margin-top: 63.65px
     
 @media screen and (max-width: 720px)
-    .card
+    section > article > .container .card
+        display: flex
+        justify-content: center
+        align-items: flex-start
+
         width: 100% !important
+        height: 40px
+
+        button
+            height: 40px
+
+        img
+            max-width: 300px
 
 @media screen and (max-width: 480px)
     .deck
