--- a/css/sass/_variables.sass
+++ b/css/sass/_variables.sass
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap')
 @import animaciones
 
 $secondary: #bdbdbd99
@@ -60,7 +61,8 @@ $secondaryStrong: #b1b1b1c4
 
     color: black
 
-    overflow: scroll
+    overflow: auto
+    moz-overflow: scroll
 
     padding: 10px
 
@@ -97,19 +99,20 @@ $secondaryStrong: #b1b1b1c4
         img
             width: 100%
 
+            border-radius: 9px
+
             transform: translateY(-5px)
 
     .card:has(button:focus)
         border-radius: 10px
 
         animation-name: open
-        animation-duration: 2s
+        animation-duration: .5s
         animation-timing-function: linear
         animation-fill-mode: forwards
 
         img
             transform: translateY(0)
-
 
     .open
         height: 100% !important
