Perfeccionada apertura de cards

--- a/css/sass/_animaciones.sass
+++ b/css/sass/_animaciones.sass
@@ -1,66 +1,100 @@
 @keyframes atraxa
     0%
         background-image: url(../../media/img/atraxa.jpg)
+    17%
+        background-image: url(../../media/img/atraxa.jpg)
     20%
+        background-image: url(../../media/img/duskshell.jpg)
+    37%
         background-image: url(../../media/img/duskshell.jpg)
     40%
         background-image: url(../../media/img/bastion.jpg)
+    57%
+        background-image: url(../../media/img/bastion.jpg)
     60%
-        background-image: url(../../media/img/polillas.jpg)
+        background-image: url(../../media/img/skate.jpg)
+    77%
+        background-image: url(../../media/img/skate.jpg)
     80%
         background-image: url(../../media/img/ratas.jpg)
+    97%
+        background-image: url(../../media/img/ratas.jpg)
     100%
-        background-image: url(../../media/img/skate.jpg)
+        background-image: url(../../media/img/atraxa.jpg)
 
 @keyframes oloro
     0%
         background-image: url(../../media/img/oloro.jpeg)
+    17%
+        background-image: url(../../media/img/oloro.jpeg)
     20%
+        background-image: url(../../media/img/arbitro.jpg)
+    37%
         background-image: url(../../media/img/arbitro.jpg)
     40%
         background-image: url(../../media/img/drannith.jpg)
+    57%
+        background-image: url(../../media/img/drannith.jpg)
     60%
+        background-image: url(../../media/img/opposition.jpg)
+    77%
         background-image: url(../../media/img/opposition.jpg)
     80%
         background-image: url(../../media/img/vampiric.png)
+    97%
+        background-image: url(../../media/img/vampiric.png)
     100%
-        background-image: url(../../media/img/aetherflux.jpg)
+        background-image: url(../../media/img/oloro.jpeg)
 
 @keyframes brago
     0%
         background-image: url(../../media/img/brago.jpg)
+    17%
+        background-image: url(../../media/img/brago.jpg)
     20%
+        background-image: url(../../media/img/venser.jpg)
+    37%
         background-image: url(../../media/img/venser.jpg)
     40%
         background-image: url(../../media/img/veredicto.jpg)
+    57%
+        background-image: url(../../media/img/veredicto.jpg)
     60%
+        background-image: url(../../media/img/remora.webp)
+    77%
         background-image: url(../../media/img/remora.webp)
     80%
         background-image: url(../../media/img/teferi.jpg)
+    97%
+        background-image: url(../../media/img/teferi.jpg)
     100%
-        background-image: url(../../media/img/azcanta.jpeg)
+        background-image: url(../../media/img/brago.jpg)
 
 @keyframes urdragon
     0%
         background-image: url(../../media/img/urdragon.webp)
+    17%
+        background-image: url(../../media/img/urdragon.webp)
     20%
+        background-image: url(../../media/img/tiamat.jpg)
+    37%
         background-image: url(../../media/img/tiamat.jpg)
     40%
         background-image: url(../../media/img/rohehuesos.png)
+    57%
+        background-image: url(../../media/img/rohehuesos.png)
     60%
+        background-image: url(../../media/img/copper.jpg)
+    77%
         background-image: url(../../media/img/copper.jpg)
     80%
         background-image: url(../../media/img/dromoka.jpg)
+    97%
+        background-image: url(../../media/img/dromoka.jpg)
     100%
-        background-image: url(../../media/img/balefire.jpeg)
+        background-image: url(../../media/img/urdragon.webp)
 
 
 @keyframes zoomIn
     to
         transform: scale(110%)
-
-@keyframes open
-    from
-        height: 0%
-    to
-        height: 296px
