--- a/css/sass/framework/_ms-ps.sass
+++ b/css/sass/framework/_ms-ps.sass
@@ -1,3 +1,21 @@
+.p-5
+    padding: 5rem
+
+.p-4
+    padding: 4rem
+
+.p-3
+    padding: 3rem
+
+.p-2
+    padding: 2rem
+
+.p-1
+    padding: 1rem
+
+.p-0
+    padding: 0rem
+
 .pt-5
     padding-top: 5rem
 
@@ -12,6 +30,57 @@
 
 .pt-1
     padding-top: 1rem
+
+.pt-0
+    padding-top: 0rem
+
+.px-5
+    padding-right: 5rem
+    padding-left: 5rem
+
+.px-4
+    padding-right: 4rem
+    padding-left: 4rem
+
+.px-3
+    padding-right: 3rem
+    padding-left: 3rem
+
+.px-2
+    padding-right: 2rem
+    padding-left: 2rem
+
+.px-1
+    padding-right: 1rem
+    padding-left: 1rem
+
+.px-0
+    padding-right: 0rem
+    padding-left: 0rem
+
+.py-5
+    padding-top: 5rem
+    padding-bottom: 5rem
+
+.py-4
+    padding-top: 4rem
+    padding-bottom: 4rem
+
+.py-3
+    padding-top: 3rem
+    padding-bottom: 3rem
+
+.py-2
+    padding-top: 2rem
+    padding-bottom: 2rem
+
+.py-1
+    padding-top: 1rem
+    padding-bottom: 1rem
+
+.py-0
+    padding-top: 0rem
+    padding-bottom: 0rem
 
 .m-5
     margin: 5rem
@@ -48,3 +117,81 @@
 
 .mt-0
     margin-top: 0rem
+
+.me-5
+    margin-right: 5rem
+
+.me-4
+    margin-right: 4rem
+
+.me-3
+    margin-right: 3rem
+
+.me-2
+    margin-right: 2rem
+
+.me-1
+    margin-right: 1rem
+
+.me-0
+    margin-right: 0rem
+
+.ms-5
+    margin-left: 5rem
+
+.ms-4
+    margin-left: 4rem
+
+.ms-3
+    margin-left: 3rem
+
+.ms-2
+    margin-left: 2rem
+
+.ms-1
+    margin-left: 1rem
+
+.ms-0
+    margin-left: 0rem
+
+.mb-5
+    margin-bottom: 5rem
+
+.mb-4
+    margin-bottom: 4rem
+
+.mb-3
+    margin-bottom: 3rem
+
+.mb-2
+    margin-bottom: 2rem
+
+.mb-1
+    margin-bottom: 1rem
+
+.mb-0
+    margin-bottom: 0rem
+
+.my-5
+    margin-top: 5rem
+    margin-bottom: 5rem
+
+.my-4
+    margin-top: 4rem
+    margin-bottom: 4rem
+
+.my-3
+    margin-top: 3rem
+    margin-bottom: 3rem
+
+.my-2
+    margin-top: 2rem
+    margin-bottom: 2rem
+
+.my-1
+    margin-top: 1rem
+    margin-bottom: 1rem
+
+.my-0
+    margin-top: 0rem
+    margin-bottom: 0rem
