--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -24,6 +24,30 @@
   align-items: center;
 }
 
+.p-5 {
+  padding: 5rem;
+}
+
+.p-4 {
+  padding: 4rem;
+}
+
+.p-3 {
+  padding: 3rem;
+}
+
+.p-2 {
+  padding: 2rem;
+}
+
+.p-1 {
+  padding: 1rem;
+}
+
+.p-0 {
+  padding: 0rem;
+}
+
 .pt-5 {
   padding-top: 5rem;
 }
@@ -42,6 +66,70 @@
 
 .pt-1 {
   padding-top: 1rem;
+}
+
+.pt-0 {
+  padding-top: 0rem;
+}
+
+.px-5 {
+  padding-right: 5rem;
+  padding-left: 5rem;
+}
+
+.px-4 {
+  padding-right: 4rem;
+  padding-left: 4rem;
+}
+
+.px-3 {
+  padding-right: 3rem;
+  padding-left: 3rem;
+}
+
+.px-2 {
+  padding-right: 2rem;
+  padding-left: 2rem;
+}
+
+.px-1 {
+  padding-right: 1rem;
+  padding-left: 1rem;
+}
+
+.px-0 {
+  padding-right: 0rem;
+  padding-left: 0rem;
+}
+
+.py-5 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.py-4 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.py-3 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.py-2 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-1 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-0 {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
 }
 
 .m-5 {
@@ -90,6 +178,116 @@
 
 .mt-0 {
   margin-top: 0rem;
+}
+
+.me-5 {
+  margin-right: 5rem;
+}
+
+.me-4 {
+  margin-right: 4rem;
+}
+
+.me-3 {
+  margin-right: 3rem;
+}
+
+.me-2 {
+  margin-right: 2rem;
+}
+
+.me-1 {
+  margin-right: 1rem;
+}
+
+.me-0 {
+  margin-right: 0rem;
+}
+
+.ms-5 {
+  margin-left: 5rem;
+}
+
+.ms-4 {
+  margin-left: 4rem;
+}
+
+.ms-3 {
+  margin-left: 3rem;
+}
+
+.ms-2 {
+  margin-left: 2rem;
+}
+
+.ms-1 {
+  margin-left: 1rem;
+}
+
+.ms-0 {
+  margin-left: 0rem;
+}
+
+.mb-5 {
+  margin-bottom: 5rem;
+}
+
+.mb-4 {
+  margin-bottom: 4rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.mb-0 {
+  margin-bottom: 0rem;
+}
+
+.my-5 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.my-4 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+.my-3 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.my-2 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.my-1 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-0 {
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+}
+
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
 }
 
 @keyframes atraxa {
@@ -271,6 +469,7 @@
 
 body {
   font-family: "Orbitron", sans-serif;
+  box-sizing: border-box;
   background-color: rgb(26, 26, 26);
   margin: 0;
 }
@@ -404,7 +603,7 @@ main section {
   flex-flow: row wrap;
   justify-content: space-around;
   align-items: center;
-  height: 100%;
+  min-height: 100%;
   color: white;
   box-shadow: 7px 7px 10px inset black;
   moz-overflow: scroll;
@@ -455,31 +654,32 @@ main section .deck:hover div {
   background-position-y: 50%;
   background-size: 120% 120%;
 }
-main section .deck:first-child a > div {
+
+.indexSection .deck:first-child a > div {
   animation-name: atraxa;
   animation-duration: 40s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
-main section .deck:nth-child(2) {
+.indexSection .deck:nth-child(2) {
   margin-left: 10.5vw;
 }
-main section .deck:nth-child(2) a > div {
+.indexSection .deck:nth-child(2) a > div {
   animation-name: oloro;
   animation-duration: 40s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
-main section .deck:nth-child(3) a > div {
+.indexSection .deck:nth-child(3) a > div {
   animation-name: brago;
   animation-duration: 40s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
-main section .deck:nth-child(4) {
+.indexSection .deck:nth-child(4) {
   margin-left: 10.5vw;
 }
-main section .deck:nth-child(4) a > div {
+.indexSection .deck:nth-child(4) a > div {
   animation-name: urdragon;
   animation-duration: 40s;
   animation-iteration-count: infinite;
@@ -563,6 +763,8 @@ section > article h1 {
   padding: 10px;
   justify-content: center;
   max-width: 280px;
+  max-height: -moz-fit-content;
+  max-height: fit-content;
 }
 #comandante .card {
   position: relative;
@@ -664,17 +866,48 @@ section > article h1 {
   height: 100% !important;
 }
 
+#comandantes article {
+  width: 100%;
+  background-color: white;
+}
+#comandantes article p {
+  color: black;
+}
+#comandantes article b {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  font-size: calc(15px + 0.8vw);
+  border-radius: 10px;
+  padding: 10px;
+  z-index: 1;
+}
+#comandantes .deck:first-child > a > div {
+  background-image: url(../../media/img/atraxa.jpg);
+}
+#comandantes .deck:nth-child(2) > a > div {
+  background-image: url(../../media/img/oloro.jpeg);
+}
+#comandantes .deck:nth-child(3) > a > div {
+  background-image: url(../../media/img/brago.jpg);
+}
+#comandantes .deck:nth-child(4) > a > div {
+  background-image: url(../../media/img/urdragon.webp);
+}
+
 @media screen and (max-width: 1450px) {
   #tierras .card, #resto .card {
     width: 100%;
   }
-  .indexSection {
-    justify-content: center;
+  main > section:not(#comandantes) {
+    padding: 40px;
   }
-  .indexSection .deck:nth-child(2) {
+  main > section:not(#comandantes) .deck:nth-child(2) {
     margin-left: 2%;
   }
-  .indexSection .deck:nth-child(4) {
+  main > section:not(#comandantes) .deck:nth-child(4) {
     margin-left: 2%;
   }
 }
@@ -694,7 +927,6 @@ section > article h1 {
 }
 @media screen and (max-width: 1125px) {
   article {
-    width: 70%;
     max-width: none !important;
     margin-top: 20px;
   }
@@ -744,7 +976,10 @@ section > article h1 {
   }
 }
 @media screen and (max-width: 480px) {
-  .deck {
+  main > section {
+    padding: 20px !important;
+  }
+  main > section > .deck {
     width: 80%;
   }
 }/*# sourceMappingURL=main.css.map */
