--- a/css/sass/main.sass
+++ b/css/sass/main.sass
@@ -87,8 +87,6 @@ main
         justify-content: space-around
         align-items: center
 
-        min-height: 100%
-
         color: white
         box-shadow: 7px 7px 10px inset black
 
@@ -211,7 +209,7 @@ section > article
         overflow: hidden
 
 #coleccion
-    height: 60vh
+    height: 70vh
 
     .container
         @include list
@@ -220,6 +218,10 @@ section > article
 
         max-width: 90vw
         height: calc(100% - 77px)
+
+#busqueda #nombre
+        border-radius: 4px
+        padding: 6px 2px 2px 10px
 
 #comandantes
     article
