--- a/css/sass/framework/_ms-ps.sass
+++ b/css/sass/framework/_ms-ps.sass
@@ -195,3 +195,27 @@
 .my-0
     margin-top: 0rem
     margin-bottom: 0rem
+
+.mx-5
+    margin-right: 5rem
+    margin-left: 5rem
+
+.mx-4
+    margin-right: 4rem
+    margin-left: 4rem
+
+.mx-3
+    margin-right: 3rem
+    margin-left: 3rem
+
+.mx-2
+    margin-right: 2rem
+    margin-left: 2rem
+
+.mx-1
+    margin-right: 1rem
+    margin-left: 1rem
+
+.mx-0
+    margin-right: 0rem
+    margin-left: 0rem
